# Logifyx-Py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: README.md  cli.md  configuration.md  handlers.md  kafka.md
examples/: demo.py  docker-compose.yml  kafka_consumer.py  kafka_demo.py  test_server.py
logify/: __init__.py  __init__.pyi  cli.py  config.py  core.py  core.pyi  filters.py  formatter.py  handler.py  kafka.py  presets.py  remote.py
logifyx/: cli.py  config.py  core.py  core.pyi  filters.py  formatter.py  handler.py  presets.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_config.py  test_context_and_registration.py  test_core.py  test_filters.py  test_integration.py  test_remote_and_formatter.py
