[project]
name = "logify"
version = "0.0.1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
description = "Modern Python Logging Framework"

authors = [
  { name = "Madhur Prakash", email = "madhurprakash2005@gmail.com" }
]

dependencies = [
  "colorlog",
  "python-json-logger",
  "pyyaml",
  "concurrent-log-handler",
  "requests",
  "python-dotenv",
]

[project.scripts]
logify = "logify.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
