[project]
name = "logify"
version = "0.0.1"
description = "Modern Python Logging Framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Madhur Prakash", email = "madhurprakash2005@gmail.com" }
]

dependencies = [
  "colorlog",
  "python-json-logger",
  "pyyaml",
  "concurrent-log-handler",
  "requests",
  "python-dotenv",
  "aiokafka",
  "fastavro",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]

[tool.setuptools.packages]

[tool.setuptools.packages.find]
exclude = ["logs*", "tests*"]
