[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "logifyx"
version = "1.0.0"
description = "A modern, production-ready Python logging framework with zero configuration."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"

authors = [
  { name = "Madhur Prakash", email = "madhurprakash2005@gmail.com" }
]

keywords = [
  "logging",
  "python-logging",
  "async-logging",
  "logger",
  "remote-logging",
  "http-logging",
  "avro-logging",
  "kafka-logging",
  "structured-logging",
  "json-logging"
]

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: System :: Logging"
]

dependencies = [
  "colorlog",
  "python-json-logger",
  "pyyaml",
  "concurrent-log-handler",
  "requests",
  "python-dotenv",
  "aiokafka",
  "fastavro",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flask",
]

[project.urls]
Homepage = "https://github.com/Madhur-Prakash/Logifyx-Py"
Documentation = "https://github.com/Madhur-Prakash/Logifyx-Py"
Source = "https://github.com/Madhur-Prakash/Logifyx-Py"
Issues = "https://github.com/Madhur-Prakash/Logifyx-Py/issues"

[project.scripts]
logifyx = "logifyx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logifyx*"]
exclude = ["tests*", "logs*", "examples*"]


# ---------------------------
# Formatting (Black)
# ---------------------------
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]


# ---------------------------
# Static Typing (MyPy)
# ---------------------------
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true


# ---------------------------
# Pytest Config
# ---------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]


# ---------------------------
# Coverage
# ---------------------------
[tool.coverage.run]
source = ["logifyx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
